[package]
name = "rollers"
version = "1.1.0"
edition = "2024"
authors = ["trunar <akindyk1@gmail.com>"]
description = "A Rust CLI dice roller"
license = "MIT"
repository = "https://github.com/trunar/rollers"
readme = "README.md"
keywords = ["dice", "cli", "rpg", "tabletop", "ttrpg"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
regex = "1.10"